--- a/examples/raisimpy_gym/envs/anymal/default_cfg.yaml
+++ b/examples/raisimpy_gym/envs/anymal/default_cfg.yaml
@@ -1,9 +1,9 @@
 seed: 1
-record_video: yes
+record_video: no
 
 environment:
   num_envs: 100
-  num_threads: 40
+  num_threads: 10
   simulation_dt: 0.0025
   control_dt: 0.01
   max_time: 4.0
